When closing widget on mobile, prevent scrolling to the top of page

--- a/src/stylesheets/mobile.less
+++ b/src/stylesheets/mobile.less
@@ -4,8 +4,6 @@ html.sk-widget-opened {
         @media (max-width: @screen-sm-min) {
             overflow: hidden;
             position: relative;
-            height: 100%;
-            width: 100%;
             -webkit-overflow-scrolling: auto;
             #sk-holder {
                 #sk-container {
